--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -375,10 +375,54 @@ footer {
   font-size: 1.2rem;
 }
 
-.icons{
-  position: sticky;
-  z-index: 1000;
-}
+
+  .icons {
+
+    right:  0px;
+    position: sticky;/* AAAAAAAA /
+    bottom:0;/ AAAAAAAA /
+    z-index: 1000/ AAAAAAAA */
+  }
+  #icon1 {
+   position: absolute;
+    bottom: 200px;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.349);
+    padding: 8px;
+    border: 3px solid white;
+    border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+  }
+  #icon2 {
+   position: absolute;
+    bottom:100px;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.349);
+    padding: 8px;
+    border: 3px solid white;
+    border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+  }
+  #icon3 {
+   position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.349);
+    padding: 8px;
+    border: 3px solid white;
+    border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+  }
+  .fas,.fa-tag {
+  opacity: 25%;
+  width: 200px;
+  
+  }
+  
+
 
 @media screen and (min-width: 800px) {
   footer {
